--- a/q01_py.ipynb
+++ b/q01_py.ipynb
@@ -39,7 +39,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "pd.set_option('display.notebook_repr_html', False)\n",
-        "tbl_0 = pd.read_table(\"tbl0.tsv\",\n",
+        "tbl_0 = pd.read_csv(\"tbl0.tsv\",\n",
         "                   sep = '\\t',\n",
         "                   thousands = None,\n",
         "                   decimal = '.')\n",
